--- a/HW4.Rmd
+++ b/HW4.Rmd
@@ -94,40 +94,51 @@ find_pi(B = 100000, make_plot = FALSE)
 
 # Exercise 3
 ```{r}
-library(ggplot2)
-get_position <- function(d1, d2, d3) {
-  x <- c(-300, 300, 0)
-  y <- c(300, 300, -300)
-  d <- c(d1, d2, d3)
-  
-  f <- numeric(3) # function definie hors loop
-  for (i in 1:3) {
-    x0 <- x[i] - d[i] # algèbre fail 
-    y0 <- y[i] - d[i] # algèbre fail 
-    f[i] <- (x[i] - x0)^2 + (y[i] - y0)^2 - d[i]^2 # algèbre fail 
-  }
-  
-  # Plot function 
-  plot1<- ggplot() +
-    geom_circle(aes(x0 = 0, y0 = 0, r = 200), fill = "grey", color = "grey") +
-    geom_point(aes(x =x, y = y), shape = 23, color = "orange") +
-    geom_circle(aes(x0 = -300, y0 = 300, r = 20), fill = "red", color = "red") +
-    geom_circle(aes(x0 = 0, y0 = -300, r = 20), fill = "blue", color = "blue") +
-    geom_circle(aes(x0 = 300, y0 = 300, r = 20), fill = "green", color = "green") +
-    geom_text(aes(x = -250, y = 300, label ='Satellite 1')) +
-    geom_text(aes(x = 300, y = 300, label ='Satellite 3')) +
-    geom_text(aes(x = 10, y = -300, label ='Satellite 2')) +
-    geom_text(aes(x = -190, y = -200, label ='Flat Earth')) +
-    coord_cartesian(xlim = c(-400, 400), ylim = c(-400, 400)) +
-    xlab("x") + ylab("y") + ggtitle("Position Estimation") +
-    
-    # display inputs on graph
-    geom_text(aes(x = x[1], y = y[1] - 50, label = paste0("d1: ", round(d[1], 2))))+
-    geom_text(aes(x = x[2], y = y[2] + 50, label = paste0("d2: ", round(d[2], 2))))+ 
-    geom_text(aes(x = x[3], y = y[3] - 50, label = paste0("d3: ", round(d[3], 2))))
-  
-# Return summary and plot
-return(list(summary(f),plot1))
+# Define the coordinates of the satellites
+x <- c(-300, 300, 0)
+y <- c(300, 300, -300)
+
+# Define the objective function for the least-square adjustment
+obj_fun <- function(theta, d, x, y) {
+  x0 <- theta[1]
+  y0 <- theta[2]
+  epsilon <- theta[3]
+  d_sq <- theta[4]
+  (x - x0)^2 + (y - y0)^2 - (d_sq - epsilon)^2
 }
-get_position(453.2136,288.8427,418.3106)
+
+# Define the GNSS function for performing the optimization
+GNSS <- function(d) {
+  # Perform the optimization using the objective function
+  result <- optim(c(0, 0, 0, mean(d)), obj_fun, d = d, x = x, y = y)
+  
+  # Extract the estimated parameters
+  x0 <- result$par[1]
+  y0 <- result$par[2]
+  epsilon <- result$par[3]
+  
+  # Create a list with the results
+  res <- list(x0 = x0, y0 = y0, epsilon = epsilon)
+  class(res) <- "GNSS"
+  res
+}
+
+# Define the plot function for GNSS objects
+plot.GNSS <- function(x, ...) {
+  x0 <- x$x0
+  y0 <- x$y0
+  epsilon <- x$epsilon
+  plot(c(-500, 500), c(-500, 500), type = "n", xlab = "x", ylab = "y")
+  text(x0, y0, "Receiver", pos = 3)
+  text(-300, 300, "Satellite 1", pos = 3)
+  text(300, 300, "Satellite 2", pos = 3)
+  text(0, -300, "Satellite 3", pos = 3)
+  segments(x0, y0, -300, 300, lty = 2)
+  segments(x0, y0, 300, 300, lty = 2)
+  segments(x0, y0, 0, -300, lty = 2)
+  arrows(x0, y0, x0 + 100*cos(theta),
+         y0 + 100*sin(theta), length = 0.1, col = "gray")
+  legend("topleft", legend = "Error ellipse", lty = 1, bty = "n", col = "gray")
+  theta <- seq(0, 2*pi, length.out = 101)
+}
 ```
